# dynamic-cheatsheet

./: .gitignore  EvaluatingResults.ipynb  ExampleUsage.ipynb  pyproject.toml  run_benchmark.py
dynamic_cheatsheet/: language_model.py
dynamic_cheatsheet/utils/: evaluation.py  execute_code.py  extractor.py  sonnet_eval.py
